syntax = "proto3";

option go_package = "github.com/golemiso/grpc_example/go/proto/helloworld";

package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
    rpc ServerStreaming (HelloRequest) returns (stream HelloReply);
    rpc ClientStreaming (stream HelloRequest) returns (HelloReply);
    rpc BidirectionalStreaming (stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
   string name = 1;
}

message HelloReply {
    string message = 1;
}
